# Sakura-API

./: Cargo.toml  README.md  diesel.toml
.github/workflows/: ci.yml
docker/: .gitignore  docker-compose.yml
migrations/2023-11-22-075134_create_account/: down.sql  up.sql
src/: main.rs
src/domain/: mod.rs
src/domain/object/: account.rs  mod.rs
src/domain/repository/: account.rs
src/infrastructures/database/: models.rs  schema.rs
src/infrastructures/repository/: account.rs
src/server/: mod.rs
src/server/handler/: account.rs
src/server/request/: account.rs
src/server/response/: account.rs
src/usecase/: account.rs
