[package]
name = "sakura-api"
version = "0.1.0"
authors = ["suba327777"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
diesel = { version = "2.1.0", features = ["postgres", "chrono","r2d2"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.75"
chrono = "0.4.31"
